--- a/ARBeauty/Base.lproj/Main.storyboard
+++ b/ARBeauty/Base.lproj/Main.storyboard
@@ -21,18 +21,21 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B0Q-6e-dAW" customClass="ARButton" customModule="ARBeauty" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="214" height="86.666666666666671"/>
-                                        <state key="normal" title="Button"/>
+                                        <state key="normal" title="Nails"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pCm-FD-xvC" customClass="ARButton" customModule="ARBeauty" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="106.66666666666669" width="214" height="86.666666666666686"/>
-                                        <state key="normal" title="Button"/>
+                                        <state key="normal" title="Lips"/>
                                         <connections>
                                             <action selector="lipsTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tdW-yk-9w5"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kM3-wE-Vam" customClass="ARButton" customModule="ARBeauty" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="213.33333333333334" width="214" height="86.666666666666657"/>
-                                        <state key="normal" title="Button"/>
+                                        <state key="normal" title="Gallery"/>
+                                        <connections>
+                                            <segue destination="Gwn-e1-110" kind="presentation" modalPresentationStyle="fullScreen" id="BSp-Id-O7f"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -73,7 +76,6 @@
         <!--Lips View Controller-->
         <scene sceneID="Azv-PB-glW">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xLR-Md-NVy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="LipsViewController" id="XyS-53-sUf" customClass="LipsViewController" customModule="ARBeauty" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jjD-kz-320">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
@@ -161,6 +163,7 @@
                         <outlet property="imageView" destination="8fk-xh-Jbt" id="Kax-nP-q2P"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xLR-Md-NVy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="98.550724637681171" y="863.31521739130437"/>
         </scene>
