--- a/ARBeauty/Views/PickerView.xib
+++ b/ARBeauty/Views/PickerView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -8,15 +8,44 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PickerView" customModule="ARBeauty" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PickerView" customModule="ARBeauty" customModuleProvider="target">
+            <connections>
+                <outlet property="bottomView" destination="BvC-rp-CWK" id="gul-Ga-Wlm"/>
+                <outlet property="topView" destination="cib-fO-tBE" id="Oxs-Ei-GT8"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="100" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cib-fO-tBE" userLabel="TopView">
+                    <rect key="frame" x="25" y="0.0" width="50" height="50"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="cib-fO-tBE" secondAttribute="height" multiplier="1:1" id="BJf-Ar-9lK"/>
+                        <constraint firstAttribute="width" constant="50" id="SKc-oP-0Cc"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BvC-rp-CWK" userLabel="BottomView">
+                    <rect key="frame" x="40" y="130" width="20" height="20"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="20" id="7AA-wN-e22"/>
+                        <constraint firstAttribute="width" secondItem="BvC-rp-CWK" secondAttribute="height" multiplier="1:1" id="cTu-dB-iaz"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="BvC-rp-CWK" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="5wL-P0-zSb"/>
+                <constraint firstItem="cib-fO-tBE" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="Soa-6i-dtr"/>
+                <constraint firstAttribute="bottom" secondItem="BvC-rp-CWK" secondAttribute="bottom" id="XaO-iF-dDM"/>
+                <constraint firstItem="cib-fO-tBE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="n6w-Lb-aP6"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="64" y="168"/>
+            <point key="canvasLocation" x="28.985507246376812" y="273.91304347826087"/>
         </view>
     </objects>
     <resources>
